Edit icons + add data
Edit beta icons and add beta data to fields

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <title>ТрейнАвиаСервис</title>
+  <link rel="shortcup icon" href="assets/images/logo_icon.png" type="image/png">
+  <title>ТрэйнАвиаСервис</title>
 </head>
 <body>
 
@@ -22,14 +23,17 @@
       </div>
 
       <div class="social_networks">
-        <a href="#"><img src="assets/images/vk.jpg"></a>
-        <a href="#"><img src="assets/images/inst.jpg"></a>
-        <a href="#"><img src="assets/images/telegr.jpg"></a>
+        <a href="#"><img src="assets/images/vk_ic.png"></a>
+        <a href="#"><img src="assets/images/inst_ic.png"></a>
+        <a href="#"><img src="assets/images/telegr_ic.png"></a>
       </div>
 
       <div class="personal_account">
-        <img src="assets/images/logout.png">
-        <a href="#">Личный кабинет</a>
+        <!--<img src="assets/images/logout.png">
+        <a href="#">Личный кабинет</a>-->
+        <img src="assets/images/warn.png">
+        <p>Сайт находится на стадии разработки</p>
+
       </div>
 
       <!-- <nav class="nav">
@@ -63,7 +67,8 @@
 
       </div>
       <div class="text_about_us">
-        <span>Тут будет какой-нибудь текст, мол копмания работает с такого-то года, у нас куча довольных клиентов и прочая фигня. Нужно будет узнать некоторые детали по поводу этого текста, поэтому пока пусть будет так, чтобы наглядно понимать как вообще это выглядит и прочее. В общем, це просто "заглушка" </span>
+        <span>Мы работаем с xxxx года. За это время мы устроили незабываемый отдых десяткам тысяч людей. С нами сотрудничают компании РЖД, Газпром и Лукойл. Мы полностью сопровождаем
+        вас от момента поступления заявки до возвращения с отдыха. Занимаемся любыми типами поездок: железнодорожные и авиасообщения.</span>
       </div>
   </div>
 </div>
@@ -122,31 +127,31 @@
     <div class="list_of_advantages">
       <div class="advantage_1">
         <div class="image_of_advantage">
-          <img src="assets/images/vk.jpg">
+          <img src="assets/images/klients_ic.png">
         </div>
 
         <div class="advantage_text">
-          <span>Преимущество 1. Расскажите, что <br> отличает ваши услуги от услуг в<br> других компаниях</span>
+          <span><b>Довольные клиенты</b><br>За все время работы мы<br>сотрудничали с тысячами людей</span>
         </div>
       </div>
 
       <div class="advantage_2">
         <div class="image_of_advantage">
-          <img src="assets/images/inst.jpg">
+          <img src="assets/images/time.png">
         </div>
         
         <div class="advantage_text">
-          <span>Преимущество 2. Расскажите, чему <br> вы уделяете больше всего внимания <br> в работе с клиентами</span>
+          <span><b>Быстро и дешево</b><br>Мы экономим не только <br>ваше время, но и деньги</span>
         </div>
       </div>
 
       <div class="advantage_3">
         <div class="image_of_advantage">
-          <img src="assets/images/telegr.jpg">
+          <img src="assets/images/vsegda.png">
         </div>
         
         <div class="advantage_text">
-          <span>Преимущество 3. Расскажите, в чем <br> преимущество работы именно с <br> вашей командой</span>
+          <span><b>Всегда на связи</b><br>Держим связь с клиентами<br>на протяжении всего рабочего дня</span>
         </div>
       </div>
     </div>
@@ -178,9 +183,9 @@
           </div>
 
           <div class="social_networks_footer">
-            <a href="#"><img src="assets/images/vk.jpg"></a>
-            <a href="#"><img src="assets/images/inst.jpg"></a>
-            <a href="#"><img src="assets/images/telegr.jpg"></a>
+            <a href="#"><img src="assets/images/vk_ic.png"></a>
+            <a href="#"><img src="assets/images/inst_ic.png"></a>
+            <a href="#"><img src="assets/images/telegr_ic.png"></a>
           </div>
         </div>
 <!--
